# hackUMBC2026

./: .gitignore  CMakeLists.txt  FUCK.py  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt  vcpkg.json
searching/: category.py  find_pdf.py  main.py
src/backend/: package-lock.json  requirements.txt  server.py  testos.py
src/backend/find_pdf/: find_pdf.py  get_Pdf.py
src/backend/search_message/: findmessage.py
src/backend/searching/: category.py  find_pdf.py  findcol.py  findmessage.py  get_Pdf.py  main.py  pdf_files2.txt  recent.py
src/backend/summarize/: data_visual.py  summarize.py  summarize2.py  summarize3.py
src/backend/visuals/: data_visual.py
src/frontEnd/: main.py
src/frontend/: package-lock.json  package.json  tsconfig.json
src/frontend/src/: App.tsx
src/frontend/src/components/pages/: AIChatbot.css  AIChatbot.tsx  ConversationSideBar.css  ConversationSideBar.tsx  Dashboard.tsx
src/frontend/src/components/ui/: Badge.tsx  Button.tsx  Input.tsx
src/frontend/src/entities/: all.ts
src/messageDatabase/: CMakeLists.txt  bindings.cpp  contact.cpp  contact.h  database.cpp  database.h  message_data.cpp  message_data.h
src/searching/: category.py  find_message.py  find_pdf.py  get_Pdf.py  main.py
src/summarize/: data_visual.py  summarize.py  tempCodeRunnerFile.py
